--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,76 +6,88 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".Register">
+    tools:context=".RegisterAct"
+    >
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:text="Register"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        android:textSize="45sp" />
-    <EditText
-        android:id="@+id/etname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="25dp"
+        android:text="Create your Account here:"
+        android:layout_gravity="center"
+        android:textSize="30dp"
+        android:layout_marginTop="20dp"/>
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:id="@+id/etFn"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="Name..." />
-
-    <EditText
-        android:id="@+id/etphone"
-        android:layout_width="match_parent"
+        app:met_floatingLabel="highlight"
+        app:met_floatingLabelText="Full Name"
+        android:layout_width="250dp"
+        android:hint="First Name"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
+        android:layout_gravity="center"
+        />
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:id="@+id/etln"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="Phone.." />
-
-    <EditText
-        android:id="@+id/etusername"
-        android:layout_width="match_parent"
+        app:met_floatingLabel="highlight"
+        app:met_floatingLabelText="Full Name"
+        android:layout_width="250dp"
+        android:hint="Last Name"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
+        android:layout_gravity="center"
+        />
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:id="@+id/etEmail"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="Username..." />
-    <EditText
-        android:id="@+id/etpassword"
-        android:layout_width="match_parent"
+        app:met_floatingLabel="highlight"
+        app:met_floatingLabelText="Email"
+        android:layout_width="250dp"
+        android:hint="Email"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
+        android:layout_gravity="center"
+        />
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:id="@+id/etUsername"
         android:layout_marginTop="20dp"
-        android:inputType="textPassword"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:hint="Password..." />
-
-    <EditText
-        android:id="@+id/etconpassword"
-        android:layout_width="match_parent"
+        app:met_floatingLabel="highlight"
+        app:met_floatingLabelText="Email"
+        android:layout_width="250dp"
+        android:hint="Username"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
+        android:layout_gravity="center"
+        />
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:id="@+id/etPass"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
-        android:inputType="textPassword"
-        android:layout_marginEnd="20dp"
-        android:hint="Confirm Password.." />
+        app:met_floatingLabel="highlight"
+        app:met_floatingLabelText="Password"
+        android:layout_width="250dp"
+        android:hint="Password"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        />
+    <com.rengwuxian.materialedittext.MaterialEditText
+        android:id="@+id/etConfPass"
+        android:layout_marginTop="20dp"
+        app:met_floatingLabel="highlight"
+        app:met_floatingLabelText="Confirm Password"
+        android:layout_width="250dp"
+        android:hint="Confirm Password"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        />
     <Button
-        android:id="@+id/btnregister"
-        android:layout_width="match_parent"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#5ca08e"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="25dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        android:text="Register"/>
+        android:onClick="registerRoute"
+        android:text="Sign UP"/>
+    <TextView
+        android:textSize="10dp"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Already have an Account?"/>
 
 </LinearLayout>
