--- a/app/src/main/res/layout/activity_log_i_n.xml
+++ b/app/src/main/res/layout/activity_log_i_n.xml
@@ -18,13 +18,27 @@
     <EditText
         android:id="@+id/etPass"
         android:inputType="textPassword"
-        app:met_floatingLabel="highlight"
-        app:met_floatingLabelText="Password"
         android:layout_width="250dp"
         android:hint="Password"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         />
+    <LinearLayout
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="20dp">
+        <CheckBox
+            android:id="@+id/cbRemember"
+            android:layout_gravity="center"
+            android:layout_width="20dp"
+            android:layout_height="20dp"/>
+        <TextView
+            android:layout_marginLeft="30dp"
+            android:text="Remember me?"
+            android:layout_width="90dp"
+            android:layout_height="20dp"/>
+    </LinearLayout>
     <Button
         android:onClick="login"
         android:layout_width="wrap_content"
