--- a/app/src/main/res/layout/activity_product__view.xml
+++ b/app/src/main/res/layout/activity_product__view.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="400dp"
             android:scaleType="fitXY"
-            android:src="@drawable/img1"
+            android:src="@drawable/noimg"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
